--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-node_modules
+.*
 package.json
 package-lock.json
+yarn-lock.json
+build.json
+export
+tsconfig.json
+tslint.json
+node_modules
+*.ts
+*.tsx
+Dockerfile
+dist
 README.md
-
-images
+*.blend
+*.fbx
+*.zip
+*.rar
